// GPS Tours & Phố Ẩm thực Vĩnh Khánh — Prisma Schema
// Ref: docs/step2_lowcode/data_fields.md (11 entities, 95 fields)

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ─────────────────────────────────────────────
// Enums
// ─────────────────────────────────────────────

enum Role {
  ADMIN
  SHOP_OWNER
  TOURIST
}

enum UserStatus {
  ACTIVE
  INACTIVE
  LOCKED
}

enum PoiCategory {
  DINING
  STREET_FOOD
  CAFES_DESSERTS
  BARS_NIGHTLIFE
  MARKETS_SPECIALTY
  CULTURAL_LANDMARKS
  EXPERIENCES_WORKSHOPS
  OUTDOOR_SCENIC
}

enum PoiStatus {
  DRAFT
  ACTIVE
  ARCHIVED
}

enum TourStatus {
  DRAFT
  ACTIVE
  ARCHIVED
}

enum TourType {
  OFFICIAL
  CUSTOM
}

enum MediaType {
  IMAGE
  AUDIO
}

enum MediaLanguage {
  VI
  EN
  ALL
}

enum TriggerType {
  GPS
  QR
  MANUAL
}

enum UserAction {
  ACCEPTED
  SKIPPED
  DISMISSED
}

enum TokenType {
  ACCESS
  REFRESH
}

// ─────────────────────────────────────────────
// Models
// ─────────────────────────────────────────────

model User {
  id               String     @id @default(uuid())
  email            String     @unique
  passwordHash     String
  fullName         String
  role             Role
  status           UserStatus @default(ACTIVE)
  failedLoginCount Int        @default(0)
  lockedUntil      DateTime?
  refreshToken     String?
  refreshTokenId   String?
  createdAt        DateTime   @default(now())
  updatedAt        DateTime   @updatedAt
  profile          Json?

  // Relations
  shopOwnerProfile ShopOwner?
  touristProfile   TouristUser?
  createdPois      Poi[]                @relation("PoiCreator")
  ownedPois        Poi[]                @relation("PoiOwner")
  createdTours     Tour[]
  passwordResets   PasswordResetToken[]
  revokedTokens    RevokedToken[]

  @@map("users")
}

model ShopOwner {
  id           String   @id @default(uuid())
  userId       String   @unique
  shopName     String
  shopAddress  String?
  phone        String?
  avatarUrl    String?
  openingHours Json?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("shop_owners")
}

model TouristUser {
  id            String   @id @default(uuid())
  userId        String   @unique
  displayName   String?
  languagePref  String   @default("VI")
  autoPlayAudio Boolean  @default(true)
  pushEnabled   Boolean  @default(false)
  pushToken     String?
  deviceId      String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  user      User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  favorites Favorite[]
  history   ViewHistory[]

  @@map("tourist_users")
}

model PasswordResetToken {
  id        String    @id @default(uuid())
  userId    String
  token     String    @unique
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime  @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("password_reset_tokens")
}

model RevokedToken {
  id        String    @id @default(uuid())
  tokenId   String    @unique
  userId    String
  type      TokenType
  reason    String?
  expiresAt DateTime
  createdAt DateTime  @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("revoked_tokens")
}

model Poi {
  id            String      @id @default(uuid())
  nameVi        String
  nameEn        String?
  descriptionVi String
  descriptionEn String?
  latitude      Float
  longitude     Float
  triggerRadius Int         @default(15)
  category      PoiCategory @default(DINING)
  status        PoiStatus   @default(DRAFT)
  qrCodeUrl     String?
  createdById   String
  ownerId       String?
  deletedAt     DateTime?
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt

  // Relations
  createdBy   User          @relation("PoiCreator", fields: [createdById], references: [id])
  owner       User?         @relation("PoiOwner", fields: [ownerId], references: [id])
  media       PoiMedia[]
  tourPois    TourPoi[]
  favorites   Favorite[]
  viewHistory ViewHistory[]
  triggerLogs TriggerLog[]

  @@index([status, deletedAt])
  @@index([ownerId])
  @@index([createdById])
  @@index([category])
  @@map("pois")
}

model PoiMedia {
  id              String        @id @default(uuid())
  poiId           String
  type            MediaType
  language        MediaLanguage @default(ALL)
  url             String
  thumbnailUrl    String?
  originalName    String?
  sizeBytes       Int?
  durationSeconds Int?
  width           Int?
  height          Int?
  orderIndex      Int           @default(0)
  createdAt       DateTime      @default(now())

  poi Poi @relation(fields: [poiId], references: [id], onDelete: Cascade)

  @@index([poiId])
  @@map("poi_media")
}

model Tour {
  id                String     @id @default(uuid())
  nameVi            String
  nameEn            String?
  descriptionVi     String?
  descriptionEn     String?
  thumbnailUrl      String?
  estimatedDuration Int? // minutes
  status            TourStatus @default(DRAFT)
  tourType          TourType   @default(OFFICIAL)
  createdById       String
  deletedAt         DateTime?
  createdAt         DateTime   @default(now())
  updatedAt         DateTime   @updatedAt

  createdBy User      @relation(fields: [createdById], references: [id])
  tourPois  TourPoi[]

  @@index([status, deletedAt])
  @@index([createdById])
  @@index([tourType, createdById, deletedAt])
  @@map("tours")
}

model TourPoi {
  id         String @id @default(uuid())
  tourId     String
  poiId      String
  orderIndex Int
  titleOverride       String?
  descriptionOverride String?
  customIntro         String?
  estimatedStayMinutes Int?
  transitionNote      String?
  isRequired          Boolean  @default(true)
  unlockRule          String?
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  tour Tour @relation(fields: [tourId], references: [id], onDelete: Cascade)
  poi  Poi  @relation(fields: [poiId], references: [id])

  @@unique([tourId, poiId])
  @@unique([tourId, orderIndex])
  @@index([tourId])
  @@map("tour_pois")
}

model Favorite {
  id        String   @id @default(uuid())
  touristId String
  poiId     String
  createdAt DateTime @default(now())

  tourist TouristUser @relation(fields: [touristId], references: [id], onDelete: Cascade)
  poi     Poi         @relation(fields: [poiId], references: [id])

  @@unique([touristId, poiId])
  @@index([touristId])
  @@map("favorites")
}

model ViewHistory {
  id          String      @id @default(uuid())
  touristId   String
  poiId       String
  viewedAt    DateTime    @default(now())
  audioPlayed Boolean     @default(false)
  triggerType TriggerType @default(MANUAL)

  tourist TouristUser @relation(fields: [touristId], references: [id], onDelete: Cascade)
  poi     Poi         @relation(fields: [poiId], references: [id])

  @@index([touristId])
  @@index([poiId])
  @@map("view_history")
}

model TriggerLog {
  id             String      @id @default(uuid())
  deviceId       String
  poiId          String
  triggerType    TriggerType
  userAction     UserAction
  userLat        Float?
  userLng        Float?
  distanceMeters Float?
  createdAt      DateTime    @default(now())

  poi Poi @relation(fields: [poiId], references: [id])

  @@index([poiId])
  @@index([deviceId])
  @@index([createdAt])
  @@map("trigger_logs")
}

model SupportedLanguage {
  code          String   @id
  label         String
  enabled       Boolean  @default(true)
  supportsText  Boolean  @default(true)
  supportsTts   Boolean  @default(true)
  requiresPack  Boolean  @default(false)
  allowOffline  Boolean  @default(false)
  defaultVoice  String?
  fallbackVoice String?
  priority      Int      @default(100)
  description   String?
  region        String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  @@index([priority])
  @@map("supported_languages")
}
